2017-08-29  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. REGRESSION(r221219): Fix unit tests using resources from WebKit directory.

        The WebKit2 directory was renamed as WebKit in r221219, but neither run-gtk-tests script nor
        Test::getResourcesDir() were updated to use the new name.

        * Scripts/run-gtk-tests:
        (TestRunner._setup_testing_environment):
        * TestWebKitAPI/glib/WebKitGLib/TestMain.h:
        (Test::getResourcesDir):

2017-08-25  Alex Christensen  <achristensen@webkit.org>

        Rename TestWebKitAPI/Tests/WebKit2* to WebKit* following Source directory rename.

        Rubber-stamped by Brady Eidson.

        * TestWebKitAPI/PlatformGTK.cmake:
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2Cocoa: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/AdditionalReadAccessAllowedURLs.mm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/AdditionalReadAccessAllowedURLsPlugin.mm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/AdditionalReadAccessAllowedURLsProtocol.h: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/AllAhem.svg: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/AlwaysRevalidatedURLSchemes.mm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/AnimatedResize.mm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/ApplicationCache.db: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/ApplicationCache.db-shm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/ApplicationCache.db-wal: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/AutoLayoutIntegration.mm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/BundleEditingDelegate.mm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/BundleEditingDelegatePlugIn.mm: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/BundleEditingDelegateProtocol.h: Removed.
        * TestWebKitAPI/Tests/WebKit2Cocoa/BundleParameters.mm: Removed.